# actors-completer

./: Cargo.toml  README.md
src/: main.rs
src/tmdb/: mod.rs
src/tmdb/clients/: configuration_client.rs  mod.rs  people_client.rs  search_client.rs
src/tmdb/models/: configuration.rs  mod.rs  people.rs
src/tmdb/models/search/: people.rs
